--- a/PDM/SmartEnergy/app/src/main/res/layout/activity_main.xml
+++ b/PDM/SmartEnergy/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:text="Login"/> -->
         <EditText
             android:id="@+id/et_user_name"
-            android:hint="User Name"
+            android:hint="Utilizador"
             android:textColor="#6bfff7"
             android:textColorHint="#52afaa"
             android:textAlignment="center"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"/>
         <EditText
             android:id="@+id/et_password"
-            android:hint="Password"
+            android:hint="Palavra-passe"
             android:textColor="#6bfff7"
             android:textColorHint="#52afaa"
             android:textAlignment="center"
@@ -53,13 +53,13 @@
             android:orientation="horizontal">
             <Button
                 android:id="@+id/btn_reset"
-                android:text="Reset"
+                android:text="Cancelar"
                 android:textAllCaps="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <Button
                 android:id="@+id/btn_submit"
-                android:text="Submit"
+                android:text="Login"
                 android:textAllCaps="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
