--- a/PDM/se/app/src/main/res/layout-w936dp/activity_login.xml
+++ b/PDM/se/app/src/main/res/layout-w936dp/activity_login.xml
@@ -18,6 +18,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <EditText
+            android:id="@+id/editTextTextPersonName"
+            android:layout_width="239dp"
+            android:layout_height="69dp"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Smart Energy"
+            android:textAlignment="center"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/username"
         android:layout_width="0dp"
