--- a/PDM/se/app/src/main/res/layout/activity_login.xml
+++ b/PDM/se/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,20 @@
     tools:context=".ui.login.LoginActivity">
 
     <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="239dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Smart Energy"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="85dp" />
+
+    <EditText
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
