--- a/PDM/se/app/src/main/res/layout-w1240dp/activity_login.xml
+++ b/PDM/se/app/src/main/res/layout-w1240dp/activity_login.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ui.login.LoginActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/editTextTextPersonName"
         android:layout_width="wrap_content"
         android:layout_height="69dp"
