--- a/PDM/se/app/src/main/res/layout-w936dp/activity_login.xml
+++ b/PDM/se/app/src/main/res/layout-w936dp/activity_login.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <EditText
+        <TextView
             android:id="@+id/editTextTextPersonName"
             android:layout_width="239dp"
             android:layout_height="69dp"
