--- a/PDM/se/app/src/main/res/layout-w1240dp/activity_login.xml
+++ b/PDM/se/app/src/main/res/layout-w1240dp/activity_login.xml
@@ -84,4 +84,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="104dp"
+        android:layout_height="70dp"
+        app:srcCompat="@drawable/logo"
+        tools:layout_editor_absoluteX="1201dp"
+        tools:layout_editor_absoluteY="17dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
