--- a/PDM/se/app/src/main/res/layout-w1240dp/activity_login.xml
+++ b/PDM/se/app/src/main/res/layout-w1240dp/activity_login.xml
@@ -33,7 +33,7 @@
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="256dp"
         android:hint="@string/prompt_username"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
@@ -86,10 +86,14 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="104dp"
-        android:layout_height="70dp"
+        android:layout_width="199dp"
+        android:layout_height="104dp"
+        android:layout_marginTop="111dp"
+        android:layout_marginBottom="51dp"
+        app:layout_constraintBottom_toTopOf="@+id/username"
+        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintVertical_bias="0.147"
         app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteX="1201dp"
-        tools:layout_editor_absoluteY="17dp" />
+        tools:layout_editor_absoluteX="109dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
