--- a/PDM/SmartEnergy/app/src/main/res/layout/activity_device_web_detail.xml
+++ b/PDM/SmartEnergy/app/src/main/res/layout/activity_device_web_detail.xml
@@ -8,11 +8,11 @@
 
     <TextView
         android:id="@+id/textViewDeviceID"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="9999"
+        android:text="99999"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,9 +48,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
         android:text="offline"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDeviceID" />
 
@@ -93,7 +95,7 @@
         android:id="@+id/textViewDeviceLogsIpAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="textViewDeviceLogsIpAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +105,7 @@
         android:id="@+id/textViewDeviceLogsValLed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="textViewDeviceLogsValLed"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +115,7 @@
         android:id="@+id/textViewDeviceLogsStateLed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="textViewDeviceLogsStateLed"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +125,7 @@
         android:id="@+id/textViewDeviceLogsValLdr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="textViewDeviceLogsValLdr"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +135,7 @@
         android:id="@+id/textViewDeviceLogsValLdrNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="textViewDeviceLogsValLdrNew"
         app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +145,7 @@
         android:id="@+id/textViewDeviceLogsValPir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="textViewDeviceLogsValPir"
         app:layout_constraintEnd_toEndOf="parent"
@@ -153,7 +155,7 @@
         android:id="@+id/textViewDeviceLogsStatePir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="textViewDeviceLogsStatePir"
         app:layout_constraintEnd_toEndOf="parent"
@@ -210,7 +212,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="IP Address"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -221,7 +223,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="LED Value"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -232,7 +234,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="16dp"
         android:text="LED State"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -243,7 +245,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Light Sensor Value"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -254,7 +256,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Light Sensor %"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -265,7 +267,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Movement Detection"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -276,7 +278,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Movement Detection State"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
