--- a/PDM/SmartEnergy/app/src/main/res/layout/activity_device_web_detail.xml
+++ b/PDM/SmartEnergy/app/src/main/res/layout/activity_device_web_detail.xml
@@ -58,16 +58,17 @@
 
     <TextView
         android:id="@+id/textViewDeviceDetail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="390dp"
+        android:layout_height="117dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="detail"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDeviceLogsStatus" />
+        app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
     <TextView
         android:id="@+id/textViewDeviceLogsID"
@@ -283,4 +284,14 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView25" />
+
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Detalhes"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDeviceLogsStatus"
+        tools:layout_editor_absoluteX="8dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
