--- a/PDM/SmartEnergy/app/src/main/res/layout/activity_device_web_detail.xml
+++ b/PDM/SmartEnergy/app/src/main/res/layout/activity_device_web_detail.xml
@@ -59,7 +59,7 @@
     <TextView
         android:id="@+id/textViewDeviceDetail"
         android:layout_width="390dp"
-        android:layout_height="117dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -352,5 +352,15 @@
         android:min="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewProgressBarValLed" />
+
+    <Switch
+        android:id="@+id/switchMovimento"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Movimento Detetado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBarValLed" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
